# openapi-mcp-server

./: .env.example  README.md  pyproject.toml
app/: bookstore_interactive_agent.py  bookstore_mcp_client.py  bookstore_mcp_server.py  bookstore_my_mcp_ollama_client.py  bookstore_my_mcp_openai_client.py  bookstore_my_mcp_server.py  bookstore_spec.json  converter.py
