[project]
name = "mcp-server-with-openapi-spec"
version = "1.0.0"
description = "This repository implements an MCP (Model Context Protocol) server that dynamically exposes API endpoints as tools using an OpenAPI specification"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastmcp==2.3.3",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-mcp-adapters==0.0.11",
    "langchain-openai==0.3.16",
    "langgraph==0.4.3",
    "requests>=2.32.2",
    "uvicorn>=0.34.2"
]

authors = [
    { name = "Rajkumar Bestha", email = "rajkumar.bestha@pwc.com" }
]
